--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="Rahul.jpg" alt="" height="150 px" width="150 px">
+                <img src="Rahul.png" alt="" height="150 px" width="150 px">
             </td>
             <td>
                 <h1>Rahul Shinde</h1>
